fix spacing between images

--- a/mood_booster/styles/style.css
+++ b/mood_booster/styles/style.css
@@ -87,6 +87,7 @@ header {
     grid-template-columns: repeat(10, 1fr)
 }
 #meme-grid {
+    display: block;
     width: 100%;
     margin: 0 auto;
     text-align: center;
@@ -96,7 +97,6 @@ header {
 }
 .meme1 {
     width: 80%;
-    margin-top: 150px;
 }
 .meme2, .meme4, .meme6 {
     max-width: 600px;
@@ -107,8 +107,7 @@ header {
 #vid1, #vid2, #vid3 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: 150px;
-    
+    margin-top: 150px;  
 }
 .title1 {
     grid-template-columns: 1/2;
@@ -176,6 +175,8 @@ h4 {
     line-height: 1.5;
     margin-top: 100px;
     margin-bottom: 100px;
+    padding-left: 30px;
+
 }
 .book:hover {
     background-color:#00ff00;
